--- a/github_header/static/css/main.css
+++ b/github_header/static/css/main.css
@@ -7,11 +7,13 @@ body {
     /*width: 100%;*/
     /*height: 75px;*/
     background-color: #040D21;
+    margin: auto;
 }
 
 .container {
     /*height: 75px;*/
-    width: 1012px;
+    display: block;
+    width: 80%;
     margin: auto;
     color: white;
 }
